[project]
name = "scheduler"
version = "0.1.0"
description = "reminders scheduler for todo app"
authors = [
    {name = "MariaWinged",email = "maria-karasevaa@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
